qr code generation and reading fixed + ticket creation fixed
